<resources>
    <string name="app_name">Huella</string>

    <!-- Strings para los menus del registro e inicio de sesion del Prefecto -->
    <!-- Menu de Inicio de Sesion -->
    <string name="menu_inicio_titulo">Bienvenido</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="iniciar_con_huella">Iniciar con huella</string>
    <string name="title_activity_login_activitytest">Sign in</string>

    <!-- Login Prefecto -->
    <string name="prefecto_login_titulo">Iniciar sesión</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>

    <!-- Registro Prefecto -->
    <string name="prefecto_registro_titulo">Registro</string>
    <string name="registro">Registro</string>
    <string name="nombre">Nombre</string>
    <string name="clave">Clave</string>
    <string name="aceptar">Aceptar</string>
    <string name="confirmar_contrasena">Confirmar contraseña</string>

    <!-- Descarga Ruta -->
    <string name="druta_clave_area">Clave area</string>
    <string name="druta_periodo">Periodo</string>
    <string name="druta_tipo">Tipo</string>
    <string name="druta_tipo_clases">Clases</string>
    <string name="druta_tipo_laboratorio">Laboratorio</string>
    <string name="druta_tipo_mixto">Mixto</string>
    <string name="druta_descargar">Descargar</string>
    <string name="druta_error_descarga">Error al descargar</string>
    <string-array name="druta_claves_area_spinner">
        <item>1001</item>
        <item>1002</item>
        <item>1003</item>
    </string-array>
    <string-array name="druta_periodo_spinner">
        <item>Matutino</item>
        <item>Vespertino</item>
        <item>Nocturno</item>
    </string-array>

    <!-- Rutas Lista Activity -->
    <string name="rutl_salir_aplicacion">Salir de la aplicación?</string>

    <!-- Recorrido Main Activity -->
    <string name="mrecorrido_seguro_salir">¿Regresar a la lista de Rutas?</string>
    <string name="mrecorrido_si">Si</string>
    <string name="mrecorrido_no">No</string>

    <!-- Fragment Codigo Barras -->
    <string name="cbarra_datos_generales">Datos Generales</string>
    <string name="cbarra_lbl_salon">Salón:</string>
    <string name="cbarra_lbl_maestro">Maestro:</string>
    <string name="cbarra_lbl_materia">Materia:</string>
    <string name="cbarra_lbl_plan">Plan:</string>
    <string name="cbarra_lbl_modalidad">Modalidad:</string>
    <string name="cbarar_lbl_codigo">Código de Barras:</string>
    <string name="cbarra_maestro">%1$s</string>
    <string name="cbarra_hora">%1$s</string>
    <string name="cbarra_salon">%1$s</string>
    <string name="cbarra_materia">%1$s</string>
    <string name="cbarra_plan">%1$s</string>
    <string name="cbarra_codigo_barra">%1$s</string>
    <string name="cbarra_escanear_salon">Escanear salón</string>
    <string name="cbarra_progreso_tasks">%1$d/%2$d</string>
    <string name="cbarra_porcentaje_tasks">%1$.2f%%</string>

    <!-- Identificar Huella Activity -->
    <string name="ih_nombre">Nombre: %1$s</string>
    <string name="ih_apellido">Apellido: %1$s</string>

    <!-- Settings Menu Strings -->
    <string name="menu_cerrar_sesion">Cerrar sesión</string>
    <string name="title_activity_test">test</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="auth_saludo">¡Buen día %1$s estamos descargando tus rutas del diaNum de hoy!</string>

    <!-- HUELLA ENRIQUE -->
    <string name="huella_enrique">03015B1C0000C002C002C0008000800080008000800080008000800000008000800080008002C00200000000000000000000000000000000239013BE3614137E561B16DE2520915E3DA4909E0C2E263E23304DBE153C0B1E591F441F38AA4E3F152F0E5F48B249DF53B348BF3DB44B5F5A39087F5F3F1EFF19BFC91F4587561C73B9A07C678557DD6708C1BD4109803D7235DED556BCDF9D4A2C0C3A4FAD093A2FC0DEFB353FE0F70000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000003015D1C00008002800000000000000000000000000000000000000000000000000080008000C002000000000000000000000000000000002310149E379413DE561B16DE2520917E3DA4909E23304DDE73C39F9E591F441F38AA4E3F152ECE9F48B249DF53B3489F3DB44B5F7235DEDF5A38C89F723A9FF74607561C4A2C0C3C4FAD88FC153C4B1C680557DD6688821D4109805D58BEDF3D19BF895D5FBF9EFD353FE0FB2FC0DEDB00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000</string>

</resources>
