<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.fime.fsw.huella.huella.Activities.InicioSesion.MenuInicioSesionActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2"
        android:src="@drawable/fsw_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="32dp">

        <Button
            android:id="@+id/iniciar_sesion_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:text="@string/iniciar_sesion" />

        <Button
            android:id="@+id/registrarse_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:text="@string/registrarse" />

        <Button
            android:id="@+id/iniciar_huella_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/iniciar_con_huella" />
    </LinearLayout>
</LinearLayout>
