<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Fragments.DatosVisitaFragment">


    <LinearLayout
        android:id="@+id/informacion_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/colorPrimaryDark"
            android:orientation="horizontal"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/hora_fime_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gasparin"
                    android:textSize="30sp"
                    android:textStyle="bold" /><!--Nomenclatura-->
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Avance"
                        android:textColor="@color/gasparin"
                        android:textSize="18sp"
                        android:textStyle="bold" /><!--txt Avance-->
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/porcentaje_tasks_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/gasparin"
                        android:textSize="30sp" /><!--procentaje recorrido-->

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Actual/Total"
                    android:textColor="@color/gasparin"
                    android:textSize="18sp"
                    android:textStyle="bold" /><!--txt actual/total-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/progreso_task_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/gasparin"
                        android:textSize="30sp" /><!--recorrido actual-->
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
        <!--Contendedor de indicadores-->

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextSubTitulo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cbarra_lbl_salon"
                        android:textStyle="bold" /><!--texto Salon-->

                    <TextView
                        android:id="@+id/salon_fime_textview"
                        style="@style/TextSubTitulo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#2979ff"
                        android:textStyle="bold" /><!--id Salon-->

                    <TextView
                        style="@style/TextSubTitulo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="17dp"
                        android:text="@string/cbarra_lbl_maestro"
                        android:textStyle="bold" /><!--texto Maestro-->

                    <TextView
                        android:id="@+id/maestro_textview"
                        style="@style/TextSubTitulo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#2979ff"
                        android:textStyle="bold" /><!--id Maestro-->

                    <TextView
                        style="@style/TextSubTitulo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="17dp"
                        android:text="@string/cbarra_lbl_materia"
                        android:textStyle="bold" /><!--texto Materia-->

                    <TextView
                        android:id="@+id/materia_textview"
                        style="@style/TextSubTitulo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#2979ff"
                        android:textStyle="bold" /><!--id Materia-->

                    <TextView
                        style="@style/TextSubTitulo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="17dp"
                        android:text="@string/cbarra_lbl_plan"
                        android:textStyle="bold" /><!--texto Tipo Clase-->

                    <TextView
                        android:id="@+id/plan_textview"
                        style="@style/TextSubTitulo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#2979ff"
                        android:textStyle="bold" /><!--id Tipo Clase-->

                    <TextView
                        style="@style/TextSubTitulo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="17dp"
                        android:text="@string/cbarar_lbl_codigo"
                        android:textStyle="bold" /><!--texto Modalidad-->

                    <TextView
                        android:id="@+id/codigo_barra_textview"
                        style="@style/TextSubTitulo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#2979ff"
                        android:textStyle="bold" /><!--id Modalidad-->

                    <!--<TextView-->
                    <!--style="@style/TextTitulo"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="center"-->
                    <!--android:text="@string/cbarra_datos_generales" />-->

                    <!--<TextView-->
                    <!--android:id="@+id/maestro_textview"-->
                    <!--style="@style/TextSubTitulo"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:paddingBottom="10dp"-->
                    <!--android:paddingTop="20dp"-->
                    <!--android:text="" />-->

                    <!--<TextView-->
                    <!--android:id="@+id/hora_fime_textview"-->
                    <!--style="@style/TextSubTitulo"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:paddingBottom="10dp"-->
                    <!--android:text="" />-->

                    <!--<TextView-->
                    <!--android:id="@+id/salon_fime_textview"-->
                    <!--style="@style/TextSubTitulo"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:paddingBottom="10dp"-->
                    <!--android:text="" />-->


                    <!--<TextView-->
                    <!--android:id="@+id/materia_textview"-->
                    <!--style="@style/TextSubTitulo"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:paddingBottom="10dp"-->
                    <!--android:text="" />-->

                </LinearLayout>


                <!-- ### CAMARA Y BOTON ACEPTAR ###

                <LinearLayout
                           android:layout_width="match_parent"
                           android:layout_height="match_parent"
                           android:layout_weight="3"
                           android:gravity="center"
                           android:orientation="horizontal">

                           <ImageButton
                               android:id="@+id/capturar_button"
                               android:layout_width="70dp"
                               android:layout_height="70dp"
                               android:background="@drawable/camara" />

                           <Space
                               android:layout_width="150dp"
                               android:layout_height="match_parent" />

                           <ImageButton
                               android:layout_width="70dp"
                               android:layout_height="70dp"
                               android:background="@drawable/aceptar" />

                       </LinearLayout>

                       -->

            </LinearLayout>

        </ScrollView>

        <ImageButton
            android:id="@+id/escaner_salon_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:background="@drawable/ic_scanner" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/empty_state"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Ha terminado esta Ruta." />

    </LinearLayout> <!-- Empty State -->

</FrameLayout>
